@@ -1130,7 +1130,13 @@ stack."
 (defun lisp-source-location (code-location)
   (let ((source (prin1-to-string
                  (sb-debug::code-location-source-form code-location 100))))
-    (make-location `(:source-form ,source) '(:position 1))))
+    (if (and (typep swank::*swank-debugger-condition* 'sb-impl::step-form-condition)
+             (and (search "SB-IMPL::WITH-STEPPING-ENABLED" source :test #'char-equal)
+                  (search "SB-IMPL::STEP-FINISHED" source :test #'char-equal)))
+        ;; The initial form is utterly uninteresting -- and almost certainly right there
+        ;; in the REPL.
+        (make-error-location "Stepping...")
+        (make-location `(:source-form ,source) '(:position 1)))))
 
 (defun emacs-buffer-source-location (code-location plist)
   (if (code-location-has-debug-block-info-p code-location)
